--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,8 @@
 {
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#362C1E",
+        "titleBar.activeBackground": "#4C3E2A",
+        "titleBar.activeForeground": "#FBFAF8"
+    },
+    "liveServer.settings.port": 5501
 }
